--- a/css/slider-section.css
+++ b/css/slider-section.css
@@ -171,7 +171,7 @@
 
 .marquee-content-vertical {
   height: 100%;
-  animation: scrolling-vertical 35s linear infinite;
+  animation: scrolling-vertical 100s linear infinite;
 }
 
 @keyframes scrolling-vertical {
@@ -180,7 +180,7 @@
   }
 
   100% {
-    transform: translateY(-1200px);
+    transform: translateY(-3300px);
   }
 }
 
@@ -265,6 +265,8 @@
   height: 500px;
 
   overflow: hidden;
+
+  transition: transform 0.7s ease-out, opacity 0.7s ease-out;
 }
 
 .slider-item {
@@ -318,12 +320,16 @@
 }
 
 @media (max-width: 1000px) {
+  .slider-btn-container {
+    margin-top: 0rem;
+  }
+
   .slider-section {
     display: block;
   }
 
   .slider-main {
-    height: 810px;
+    height: 830px;
   }
 
   .slider-item {
