--- a/css/bg-images.css
+++ b/css/bg-images.css
@@ -4,7 +4,7 @@
   min-height: 60vh;
   background-size: cover;
   background-repeat: no-repeat;
-  background-position: center center;
+  background-position: center;
   background-attachment: fixed;
 }
 
@@ -23,10 +23,12 @@
 
 .bg-img-3 {
   background-image: url('../img/CONTAINERIMAGES/Garage_PRE_Final 3.jpg');
+  background-position: center center;
 }
 
 .bg-img-4 {
   background-image: url('../img/CONTAINERIMAGES/MT_JUNKYARD.jpg');
+  background-position: center center;
 }
 
 .bg-img-5 {
@@ -44,23 +46,29 @@
     background-attachment: scroll;
   }
   .bg-img-1 {
-    min-height: 55vh;
+    min-height: 65vh;
     background-image: url('../img/CONTAINERIMAGES/Home_Mobile_image2.jpg');
     background-size: cover;
     background-position: center;
   }
   .bg-img-2 {
     background-image: url('../img/CONTAINERIMAGES/City Banner.jpg');
-    background-position: center center;
+    background-size: cover;
+    background-position: center;
+  }
+  .bg-img-3 {
+    background-image: url('../img/CONTAINERIMAGES/Garage_PRE_Final 3.jpg');
+    background-position: center;
     background-size: cover;
   }
-
   .bg-img-4 {
     background-image: url('../img/CONTAINERIMAGES/Between Utilities_Roadmap_Mobile_image.jpg');
+    background-position: center;
     background-size: cover;
   }
   .bg-img-5 {
     background-image: url('../img/CONTAINERIMAGES/Collection Character Image_MOBILE.jpg');
     background-size: cover;
+    background-position: center;
   }
 }
