--- a/css/utilities-section.css
+++ b/css/utilities-section.css
@@ -1,32 +1,25 @@
 /* utilities section */
 
-.utilities-top {
+.utilities-section {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
   column-gap: 1rem;
+}
 
+.utilities-text-title {
+  grid-column: 1/-1;
   margin-bottom: 2rem;
 }
 
-.utilities-top-text-title {
-  margin-bottom: 2rem;
-}
-
-.utilities-top-desc {
-  line-height: 1.6;
-
-  transition: transform 0.7s ease-out, opacity 0.7s ease-out;
-}
-
-.utilities-top-img {
+.utilities-gif-img {
   transition: transform 0.7s ease-out 0.3s, opacity 0.7s ease-out 0.3s;
 }
 
-.utilities-bottom {
+.utilities-main {
   display: grid;
-  grid-template-columns: repeat(5, 1fr);
+  grid-template-columns: repeat(2, 1fr);
   column-gap: 2rem;
-  row-gap: 2rem;
+  row-gap: 4rem;
 }
 
 .utility-title {
@@ -75,9 +68,19 @@
 }
 
 @media (max-width: 1000px) {
-  .utilities-top {
+  .utilities-section {
+    grid-template-columns: 1fr;
+    row-gap: 1rem;
+  }
+  .utilities-main {
     grid-template-columns: 1fr;
     row-gap: 2rem;
+  }
+  .utilities-text-title {
+    text-align: center;
+  }
+  .utilities-gif-img {
+    grid-row: 1/2;
   }
 
   .utilities-top-img {
@@ -86,6 +89,11 @@
 
   .utilities-bottom {
     grid-template-columns: repeat(3, 1fr);
+  }
+
+  .utilities-main {
+    grid-template-columns: 1fr;
+    row-gap: 2rem;
   }
 }
 @media (max-width: 800px) {
