--- a/css/slider-gallery.css
+++ b/css/slider-gallery.css
@@ -51,18 +51,14 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    /* text-align: center; */
     flex-shrink: 0;
     width: var(--slider-gallery-element-width);
     max-height: 100%;
-    /* width: 100%; */
-    font-size: calc(var(--slider-gallery-height) * 3 / 4); /* 5rem; */
+    font-size: calc(var(--slider-gallery-height) * 3 / 4);
     white-space: nowrap;
   }
 
   .slider-gallery-content li img {
-    /* width: 100%; */
-    /* height: 100%; */
     border-left: 5px solid #000;
     border-right: 5px solid #000;
   }
@@ -85,7 +81,6 @@
 
   .slider-gallery-content li img {
     width: 100%;
-    /* height: 100%; */
     border-left: 5px solid #000;
     border-right: 5px solid #000;
   }
