--- a/css/bg-images.css
+++ b/css/bg-images.css
@@ -9,7 +9,7 @@
 }
 
 .bg-img-1 {
-  background-image: url('../img/CONTAINERIMAGES/City Banner.jpg');
+  background-image: url('../img/CONTAINERIMAGES/City Banner.webp');
   min-height: 80vh;
   background-repeat: no-repeat;
   background-size: cover;
@@ -17,7 +17,7 @@
 }
 
 .bg-img-2 {
-  background-image: url('../img/CONTAINERIMAGES/City Banner.jpg');
+  background-image: url('../img/CONTAINERIMAGES/City Banner.webp');
   background-position: top center;
 }
 
@@ -27,12 +27,12 @@
 }
 
 .bg-img-4 {
-  background-image: url('../img/CONTAINERIMAGES/MT_JUNKYARD.jpg');
+  background-image: url('../img/CONTAINERIMAGES/MT_JUNKYARD.webp');
   background-position: center center;
 }
 
 .bg-img-5 {
-  background-image: url('../img/CONTAINERIMAGES/CHARACTER BANNER.jpg');
+  background-image: url('../img/CONTAINERIMAGES/CHARACTER BANNER.webp');
   background-position: bottom center;
   background-size: cover;
 }
@@ -50,12 +50,12 @@
 @media (max-width: 1000px) {
   .bg-img-1 {
     min-height: 65vh;
-    background-image: url('../img/CONTAINERIMAGES/Home_Mobile_image2.jpg');
+    background-image: url('../img/CONTAINERIMAGES/Home_Mobile_image2.webp');
     background-size: cover;
     background-position: center;
   }
   .bg-img-2 {
-    background-image: url('../img/CONTAINERIMAGES/City Banner.jpg');
+    background-image: url('../img/CONTAINERIMAGES/City Banner.webp');
     background-size: cover;
     background-position: center;
   }
@@ -65,12 +65,12 @@
     background-size: cover;
   }
   .bg-img-4 {
-    background-image: url('../img/CONTAINERIMAGES/Between Utilities_Roadmap_Mobile_image.jpg');
+    background-image: url('../img/CONTAINERIMAGES/Between Utilities_Roadmap_Mobile_image.webp');
     background-position: center;
     background-size: cover;
   }
   .bg-img-5 {
-    background-image: url('../img/CONTAINERIMAGES/Collection Character Image_MOBILE.jpg');
+    background-image: url('../img/CONTAINERIMAGES/Collection Character Image_MOBILE.webp');
     background-size: cover;
     background-position: center;
   }
