--- a/css/nav-splalshscreen.css
+++ b/css/nav-splalshscreen.css
@@ -1,19 +1,14 @@
-/* splash screen navbar */
-
 nav {
   padding: 1rem 0;
 }
-
 .nav {
   display: grid;
   justify-content: center;
   align-items: center;
 }
-
 .logo {
   width: 10rem;
 }
-
 .social-links {
   display: flex;
   justify-content: flex-end;
@@ -21,25 +16,21 @@ nav {
   font-size: 1.25rem;
   margin-top: -1.25rem;
 }
-
 .social-link {
   color: var(--text-clr);
 }
-
 @media (max-width: 1000px) {
   .logo {
     width: 7.5rem;
   }
 }
-
 @media (max-width: 800px) {
   .logo {
     width: 5rem;
   }
-
   .social-links {
     gap: 0.5rem;
     font-size: 1rem;
-    margin-top: 0rem;
+    margin-top: 0;
   }
 }
