--- a/css/team-section.css
+++ b/css/team-section.css
@@ -1,68 +1,47 @@
-/* team section */
 .team {
-  padding-bottom: 0rem;
+  padding-bottom: 0;
 }
 .team-members {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   row-gap: 1rem;
   column-gap: 2rem;
-
   margin-top: 2rem;
 }
-
 .team-member {
   text-align: center;
   height: 325px;
-
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
   align-items: center;
 }
-
-/* .team-member-four,
-.team-member-five,
-.team-member-six {
-  justify-content: flex-start;
-} */
-
 .member-image {
   width: 45%;
   margin-bottom: 1rem;
-
   transition: width 0.2s ease-in;
 }
-
 .team-member:hover {
   cursor: pointer;
 }
-
 .team-member:hover .member-image {
   width: 65%;
 }
-
 .team-member:hover .member-name {
   opacity: 0;
 }
-
 .team-member:hover .member-role {
   opacity: 1;
-
   transform: translateY(-2.5rem);
 }
-
 .team-member:hover .member-info {
   opacity: 1;
-
   transform: translateY(-2.5rem);
 }
 .team-member:hover .member-links {
   opacity: 1;
-
   transform: translateY(-2.5rem);
 }
-
 .team-member-one {
   transition: transform 0.7s ease-in 0s, opacity 0.7s ease-in 0s;
 }
@@ -81,38 +60,30 @@
 .team-member-six {
   transition: transform 0.7s ease-in 0.6s, opacity 0.7s ease-in 0.6s;
 }
-
 .member-name {
   font-size: 1.25rem;
   text-transform: uppercase;
   margin-bottom: 0.25rem;
-  font-weight: normal;
-
+  font-weight: 400;
   transition: opacity 0.3s ease-in;
 }
-
 .member-role {
   color: var(--black-light);
   margin-bottom: 0.5rem;
   text-transform: capitalize;
-  font-weight: normal;
+  font-weight: 400;
   font-size: 0.9rem;
-
   opacity: 0;
-
   transition: opacity 0.3s ease-in, transform 0.3s ease-in;
 }
-
 .member-info {
   text-transform: capitalize;
-  font-weight: normal;
+  font-weight: 400;
   max-width: 45ch;
   font-size: 0.75rem;
   margin: 0 auto;
   line-height: 1.6;
-
   opacity: 0;
-
   transition: opacity 0.3s ease-in, transform 0.3s ease-in;
 }
 .member-links {
@@ -122,10 +93,8 @@
   gap: 0.5rem;
   padding: 0.5rem 0;
   opacity: 0;
-
   transition: opacity 0.3s ease-in, transform 0.3s ease-in;
 }
-
 .member-link {
   color: var(--text-clr);
   transition: color 0.3s ease-in-out;
@@ -133,11 +102,9 @@
 .member-link:hover {
   color: var(--blue-clr);
 }
-
 .member-links-icon {
   font-size: 1rem;
 }
-
 @media (max-width: 800px) {
   .team-members {
     grid-template-columns: 1fr;
