--- a/css/welcome-section.css
+++ b/css/welcome-section.css
@@ -1,282 +1,215 @@
-/* welcome section */
-
 .welcome-section {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
   column-gap: 2rem;
 }
-
 .welcome-section-title {
   margin-bottom: 1rem;
 }
-
 .welcome-section-desc {
   line-height: 1.6;
   display: inline;
-
   transition: transform 0.7s ease-out, opacity 0.7s ease-out;
 }
-
 .welcome-section-desc-2 {
   line-height: 1.6;
-
   transition: transform 0.7s ease-out, opacity 0.7s ease-out;
 }
-
 .welcome-text-mobile {
   display: none;
 }
-
 .welcome-section-desc-desktop {
   display: block;
 }
 .welcome-section-desc-mobile {
   display: none;
 }
-
 .read-more-text {
   line-height: 1.6;
   display: none;
   transition: transform 0.7s ease-out, opacity 0.7s ease-out;
 }
-
 .welcome-section-link {
   color: var(--blue-clr);
   display: block;
   text-decoration: none;
   margin-bottom: 5rem;
-
   transition: transform 0.7s ease-out, opacity 0.7s ease-out;
   margin-top: 1rem;
 }
-
 .welcome-section-social-links {
   display: flex;
   justify-content: flex-start;
   align-items: center;
   gap: 0.5rem;
-
   color: var(--blue-clr);
-
   margin-bottom: 1rem;
-
   transition: transform 0.7s ease-out, opacity 0.7s ease-out;
 }
-
 .welcome-section-social-link > i {
   color: var(--text-clr);
 }
-
 .margin-top {
   margin-top: 4rem;
 }
-
 .welcome-section-left-col {
   position: relative;
 }
-
 .mint-btn-container {
   display: grid;
   justify-content: center;
-
   position: relative;
-
   transition: transform 0.7s ease-out, opacity 0.7s ease-out;
 }
-
 .mint-btn-container-mobile {
   display: none;
 }
-
 .mint-btn-container-img {
   width: 75%;
   margin: 0 auto;
 }
-
 .mint-container-btn {
   position: absolute;
   top: 38%;
   left: 50%;
   transform: translate(-50%, -50%);
 }
-
 .alert-box {
   width: 90%;
   margin: 0 auto;
-
   display: flex;
   align-items: center;
   gap: 1rem;
-  background: linear-gradient(
-    90deg,
-    rgba(0, 0, 0, 1) 25%,
-    rgba(255, 255, 255, 0.05) 100%
-  );
-
+  background: linear-gradient(90deg, #000 25%, rgba(255, 255, 255, 0.05) 100%);
   border-radius: 0.25rem;
-
   position: absolute;
   bottom: 10px;
   left: 0;
-
   transition: transform 0.7s ease-out, opacity 0.7s ease-out;
 }
-
 .alert-icon {
   width: 10rem;
 }
-
 .alert-desc {
   line-height: 1.5;
   font-size: 0.9rem;
-
   padding: 0.5rem;
 }
-
 @media (max-width: 1200px) {
   .welcome-section {
     column-gap: 1rem;
   }
-
   .mint-btn-container-img {
     width: 90%;
   }
-
   .alert-box {
     width: 100%;
   }
-
   .alert-desc {
     font-size: 0.875rem;
     padding: 1rem;
   }
 }
-
 .read-more {
   color: var(--blue-clr);
   font-weight: 500;
   cursor: pointer;
-
   display: none;
 }
-
 @media (max-width: 1000px) {
   .welcome-section {
     grid-template-columns: 1fr;
     row-gap: 4rem;
   }
-
   .mint-btn-container-desktop {
     display: none;
   }
   .mint-btn-container-mobile {
     display: grid;
     justify-content: center;
-
     position: relative;
-
     transition: transform 0.7s ease-out, opacity 0.7s ease-out;
   }
-
   .mint-btn-container-img {
     width: 70%;
   }
-
   .mint-container-btn {
     position: absolute;
     top: 57%;
     left: 50%;
     transform: translate(-50%, -50%);
   }
-
   .welcome-text-mobile {
     display: block;
     transition: transform 0.7s ease-out, opacity 0.7s ease-out;
   }
-
   .welcome-section-desc-desktop {
     display: none;
   }
-
   .welcome-section-desc-mobile {
     display: inline;
   }
-
   .read-more {
     display: inline-block;
   }
-
   .read-more-text {
     display: none;
     overflow: hidden;
   }
-
   .show-read-more {
     display: inline;
     height: auto;
   }
-
   .hidden {
     display: none;
   }
-
   .welcome-section-link {
     margin-bottom: 3rem;
   }
-
   .welcome-section-left-col {
     grid-row: 1/2;
   }
-
   .alert-box {
     margin-top: 1rem;
     width: 100%;
     position: static;
   }
 }
-
 @media (max-width: 800px) {
   .mint-btn-container-img {
     width: 80%;
   }
 }
-
 @media (max-width: 600px) {
   .mint-btn-container-img {
     width: 95%;
   }
-
   .alert-icon {
     display: none;
   }
-
   .alert-box {
-    background: transparent;
+    background: 0 0;
   }
-
   .alert-desc {
     padding: 0;
     color: var(--blue-clr);
     font-weight: 600;
   }
-
   .mint-btn-container-img {
     width: 100%;
   }
   .alert-box {
-    bottom: 0px;
+    bottom: 0;
   }
 }
 @media (max-width: 470px) {
   .mint-btn-container-img {
     width: 100%;
   }
-
   .alert-box {
     position: static;
     display: block;
   }
-
   .alert-icon {
     width: 7.5rem;
   }
